Initial commit: Spring Boot Expense Tracker API